[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
arrow = "50"
parquet = { version = "50", features = ["arrow", "async"] }
deltalake = { version = "0.17", features = ["s3", "datafusion-ext"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-http = "0.60"
aws-creds = "0.36"
anyhow = "1.0"
chrono = "0.4"
